--- a/src/styles/CategoryProductRow.css
+++ b/src/styles/CategoryProductRow.css
@@ -2,8 +2,10 @@
     border: 1px solid black;
     border-radius: 5px;
     margin-bottom: 12px;
+
 }
 .category-title{
-    font-size: 20px;
+    font-size: 20;
     font-weight: 700;
+
 }
