--- a/src/styles/ProductTable.css
+++ b/src/styles/ProductTable.css
@@ -1,8 +1,8 @@
-.product-table-header{
+.product-table__header{
     display: flex;
     justify-content: space-evenly;
 }
-.product-table-header span{
+.product-table__header span{
     font-size: 20px;
     font-weight: 700;
 }
