--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -1,10 +1,9 @@
 .search-bar__container{
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     margin-bottom: 16px;
-    /* border: 1px solid blue; */
 }
-.search-bar__container input{
+.search-bar__container input {
     border-radius: 4px;
-    width: 75%;
 }
